--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "latest",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-big-calendar": "^1.19.2",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.0"
   },
